# hersenschemen

./: .gitignore  4.1-and-4.2.txt  4.2.dia  4.3.txt  5.org  CSV.pm  README.org  csv-to-net-input.pl  days-classification-with-k-60.txt  kmeans-optimal-clusters-for-k2.txt  kmeans.scm  knn.p6  knn.scm
ga/: ga.pl  wings.scm
kmeans/: kmeans-icd-list-per-k-for-dataset1.txt  kmeans-optimal-clusters-for-k3.txt  kmeans-optimal-clusters-for-k4.txt  kmeans.scm
knn/: CSV.pm  knn-OLD.p6  knn.scm  validation-results.txt
lit/: main.py  read_faces.py
neuralnet/: CMakeLists.txt  main.cpp  neural-network.cc
neuralnet-f/: CMakeLists.txt  common.hh  data-to-net-input.pl  idx.hh  main.cc  matrix.hh  nn.hh  vector.hh
neuralnet-oo/: CMakeLists.txt  common.hh  main.cc  main.cpp  net.hh  neural-network.cc  neural-network.hh  neuron.hh
